--- a/sahara/src/Header.css
+++ b/sahara/src/Header.css
@@ -16,6 +16,7 @@
     font-size: 29px;
     font-weight: 600;
     margin-right: 30px;
+    color: burlywood;
 }
 .header_search{
     display: flex;
