--- a/sahara/src/Header.css
+++ b/sahara/src/Header.css
@@ -13,10 +13,11 @@
     object-fit: contain;
     margin: 0 20px;
     color: white;
-    font-size: 29px;
+     font-size: 25px;
     font-weight: 600;
-    margin-right: 30px;
+    margin-right: 34px;
     color: burlywood;
+    font-family: 'Pacifico', cursive;
    
 }
 .header_search{
