adjusting logos in header/login

--- a/sahara/src/Header.css
+++ b/sahara/src/Header.css
@@ -9,16 +9,14 @@
 }
 
 .header_logo{
-    width: 100px;
+    width: 120px;
     object-fit: contain;
     margin: 0 20px;
     color: white;
-     font-size: 25px;
+    /* font-size: 25px; */
     font-weight: 600;
-    margin-right: 34px;
+    margin-right: 20px;
     color: burlywood;
-    font-family: 'Pacifico', cursive;
-   
 }
 .header_search{
     display: flex;
