--- a/sahara/src/Login.css
+++ b/sahara/src/Login.css
@@ -10,7 +10,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     object-fit: contain;
-    width: 100px;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
 }
